--- a/apps/nextjs/src/content/br/projects/ANP.mdx
+++ b/apps/nextjs/src/content/br/projects/ANP.mdx
@@ -1,24 +1,19 @@
 ---
 title: "ANP"
-description: "Descrição opcional"
+description: "Classificador inteligente de tipologias da ANP com base normativa e IA explicável."
 ---
 
-# RAG Engine
+# Classificador de Tipologias da ANP
 
-O RAG da MindLoop foi projetado para:
+O **Classificador de Tipologias da ANP** da MindLoop foi desenvolvido para apoiar a interpretação e o enquadramento de eventos operacionais de forma **consistente, rastreável e alinhada à regulamentação vigente**.
 
-- alta precisão  
-- contextualização normativa  
-- explicabilidade  
-- tolerância a ruído  
+A solução utiliza um **RAG Engine (Retrieval-Augmented Generation)** especializado em normas regulatórias, permitindo que cada classificação seja realizada com base no **contexto normativo correto**, mesmo quando as descrições dos eventos são incompletas, ambíguas ou apresentam ruído operacional.
+
+Mais do que automatizar decisões, o classificador foi concebido para **explicar o raciocínio por trás de cada resultado**, tornando o processo transparente para equipes técnicas, auditorias internas e interfaces com órgãos reguladores. O sistema preserva a semântica da norma da ANP, evitando simplificações artificiais ou regras genéricas que poderiam distorcer o enquadramento do evento.
+
+O resultado é uma ferramenta que combina **engenharia de conhecimento**, **busca semântica** e **IA explicável**, oferecendo suporte confiável à classificação de tipologias, redução de retrabalho e aumento da qualidade das comunicações regulatórias.
 
 ---
 
-## Pipeline
 
-1. Normalização  
-2. Chunking inteligente  
-3. Indexação FAISS / Milvus  
-4. Reranking  
-5. Geração guiada por contexto  
 
