--- a/apps/nextjs/src/content/en/projects/ANP.mdx
+++ b/apps/nextjs/src/content/en/projects/ANP.mdx
@@ -14,3 +14,19 @@ Mais do que automatizar decisões, o classificador foi concebido para **explicar
 O resultado é uma ferramenta que combina **engenharia de conhecimento**, **busca semântica** e **IA explicável**, oferecendo suporte confiável à classificação de tipologias, redução de retrabalho e aumento da qualidade das comunicações regulatórias.
 
 ---
+
+## Access the Project
+
+<div className="mt-8">
+  <a
+    href="https://projeto-anp.mindloop.ia.br/"
+    target="_blank"
+    rel="noopener noreferrer"
+    className="inline-flex items-center gap-2 px-6 py-3 bg-primary text-primary-foreground hover:bg-primary/90 rounded-lg font-medium transition-colors"
+  >
+    Access ANP Classifier
+    <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+    </svg>
+  </a>
+</div>
