Atualiza documentação LATS-P

--- a/apps/nextjs/src/content/docs/br/lats-p/complete-guide.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/complete-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: LoopynLATS – Complete Guide
-description: Probabilistic decision tree navigation using LATS-P with entropy tracking and HITL support
+description: "Probabilistic decision tree navigation using LATS-P with entropy tracking and HITL support"
 ---
 
 # LoopynLATS – Complete Guide
