--- a/apps/nextjs/src/content/docs/br/lats-p/configuring-lats.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/configuring-lats.mdx
@@ -1,7 +1,7 @@
 ---
 
 title: Configuring LATS-P
-description: How to tune thresholds, temperature and limits for probabilistic decision making
+description: "How to tune thresholds, temperature and limits for probabilistic decision making"
 ---------------------------------------------------------------------------------------------
 
 O comportamento do LATS-P é fortemente influenciado por seus parâmetros de configuração.
