--- a/apps/nextjs/src/content/docs/br/lats-p/designing-good-decision-trees.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/designing-good-decision-trees.mdx
@@ -1,7 +1,7 @@
 ---
 
 title: Designing Good Decision Trees
-description: How to design decision trees that work well with LATS-P
+description: "How to design decision trees that work well with LATS-P"
 --------------------------------------------------------------------
 
 A qualidade das decisões produzidas pelo LATS-P depende diretamente da **qualidade da árvore de decisão**.
