--- a/apps/nextjs/src/content/docs/br/lats-p/evaluators-deep-dive.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/evaluators-deep-dive.mdx
@@ -1,7 +1,7 @@
 ---
 
 title: Evaluators Deep Dive
-description: Understanding evaluator strategies and their trade-offs in LATS-P
+description: "Understanding evaluator strategies and their trade-offs in LATS-P"
 ------------------------------------------------------------------------------
 
 Evaluators são responsáveis por atribuir **scores iniciais** às opções disponíveis em cada nó de decisão.
