--- a/apps/nextjs/src/content/docs/br/lats-p/glossary.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/glossary.mdx
@@ -1,6 +1,6 @@
 ---
 title: Glossário
-description: Conceitos fundamentais do LoopynLATS
+description: "Conceitos fundamentais do LoopynLATS"
 ---
 
 Este glossário define os principais conceitos utilizados pelo **LoopynLATS**.  
