--- a/apps/nextjs/src/content/docs/br/lats-p/how-lats-p-works.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/how-lats-p-works.mdx
@@ -1,6 +1,7 @@
 ---
 title: How LATS-P Works
-description: Internal mechanics of the probabilistic decision process used by LoopynLATS
+description: "Internal mechanics of the probabilistic decision process used by LoopynLATS"
+
 ---
 
 LATS-P (Language Agent Tree Search – Probabilistic) é um algoritmo de navegação em árvores de decisão que combina **avaliação probabilística**, **medidas explícitas de incerteza** e **governança humana condicional**.
