--- a/apps/nextjs/src/content/docs/br/lats-p/index.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/index.mdx
@@ -2,7 +2,7 @@
 
 title: LoopynLATS
 sidebar_position: 1
-description: Probabilistic decision trees with explicit uncertainty and Human-in-the-Loop governance
+description: "Probabilistic decision trees with explicit uncertainty and Human-in-the-Loop governance"
 ----------------------------------------------------------------------------------------------------
 
 # LoopynLATS
