--- a/apps/nextjs/src/content/docs/br/lats-p/api-reference.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/api-reference.mdx
@@ -1,7 +1,7 @@
 ---
 
 title: API Reference
-description: Public API and data contracts of LoopynLATS
+description: "Public API and data contracts of LoopynLATS"
 --------------------------------------------------------
 
 Esta seção documenta a **API pública** do LoopynLATS.
