--- a/apps/nextjs/src/content/docs/br/lats-p/hitl-integration-guide.mdx
+++ b/apps/nextjs/src/content/docs/br/lats-p/hitl-integration-guide.mdx
@@ -1,7 +1,7 @@
 ---
 
 title: HITL Integration Guide
-description: Integrating Human-in-the-Loop workflows with LATS-P
+description: "Integrating Human-in-the-Loop workflows with LATS-P"
 ----------------------------------------------------------------
 
 Human-in-the-Loop (HITL) é um componente central do LATS-P.
